--- a/apps/website/content/saas-js/docs/(open-source)/iconx/reference/icon-sets.mdx
+++ b/apps/website/content/saas-js/docs/(open-source)/iconx/reference/icon-sets.mdx
@@ -5,7 +5,9 @@ description: Browse and discover available icon sets in @saas-js/iconify
 
 # Icon Sets
 
-@saas-js/iconify provides access to 200,000+ icons from 150+ icon sets available in the Iconify ecosystem. This page covers the most popular icon sets and their characteristics.
+Iconx provides access to 200,000+ icons from 150+ icon sets available in the
+Iconify ecosystem. This page covers the most popular icon sets and their
+characteristics.
 
 ## Popular Icon Sets
 
@@ -18,12 +20,13 @@ description: Browse and discover available icon sets in @saas-js/iconify
 **Best for:** General UI, modern applications
 
 ```bash
-icons add --set lucide home user settings mail search edit trash plus minus
+iconx add --set lucide home user settings mail search edit trash plus minus
 ```
 
 **Examples:**
+
 - `home` - House icon
-- `user` - User profile icon  
+- `user` - User profile icon
 - `settings` - Gear/cog icon
 - `mail` - Email icon
 - `search` - Magnifying glass
@@ -39,10 +42,11 @@ icons add --set lucide home user settings mail search edit trash plus minus
 **Best for:** Tailwind CSS projects, clean interfaces
 
 ```bash
-icons add --set heroicons home user cog envelope magnifying-glass
+iconx add --set heroicons home user cog envelope magnifying-glass
 ```
 
 **Examples:**
+
 - `home` - House icon
 - `user` - User icon
 - `cog` - Settings icon
@@ -58,7 +62,7 @@ icons add --set heroicons home user cog envelope magnifying-glass
 **Best for:** Clean, minimalist designs
 
 ```bash
-icons add --set tabler home user settings mail search edit trash plus minus
+iconx add --set tabler home user settings mail search edit trash plus minus
 ```
 
 ### Feather (`feather`)
@@ -70,7 +74,7 @@ icons add --set tabler home user settings mail search edit trash plus minus
 **Best for:** Clean, simple interfaces
 
 ```bash
-icons add --set feather home user settings mail search edit trash plus minus
+iconx add --set feather home user settings mail search edit trash plus minus
 ```
 
 ### Phosphor (`phosphor`)
@@ -82,7 +86,7 @@ icons add --set feather home user settings mail search edit trash plus minus
 **Best for:** Flexible design systems
 
 ```bash
-icons add --set phosphor house user gear envelope magnifying-glass
+iconx add --set phosphor house user gear envelope magnifying-glass
 ```
 
 ### Material Design Icons (`mdi`)
@@ -94,7 +98,7 @@ icons add --set phosphor house user gear envelope magnifying-glass
 **Best for:** Material Design applications
 
 ```bash
-icons add --set mdi home account settings email search edit delete plus minus
+iconx add --set mdi home account settings email search edit delete plus minus
 ```
 
 ### Font Awesome
@@ -109,7 +113,7 @@ Font Awesome offers multiple icon sets:
 **Style:** Solid/filled
 
 ```bash
-icons add --set fa-solid home user cog envelope search edit trash plus minus
+iconx add --set fa-solid home user cog envelope search edit trash plus minus
 ```
 
 #### Regular (`fa-regular`)
@@ -120,7 +124,7 @@ icons add --set fa-solid home user cog envelope search edit trash plus minus
 **Style:** Outline
 
 ```bash
-icons add --set fa-regular heart star user bookmark
+iconx add --set fa-regular heart star user bookmark
 ```
 
 #### Brands (`fa-brands`)
@@ -131,7 +135,7 @@ icons add --set fa-regular heart star user bookmark
 **Style:** Brand logos
 
 ```bash
-icons add --set fa-brands github twitter linkedin facebook instagram
+iconx add --set fa-brands github twitter linkedin facebook instagram
 ```
 
 ## Specialized Icon Sets
@@ -144,7 +148,7 @@ icons add --set fa-brands github twitter linkedin facebook instagram
 **Best for:** Development tools, GitHub-style interfaces
 
 ```bash
-icons add --set octicons home person gear mail search pencil trash plus dash
+iconx add --set octicons home person gear mail search pencil trash plus dash
 ```
 
 ### Remix Icon (`ri`)
@@ -155,7 +159,7 @@ icons add --set octicons home person gear mail search pencil trash plus dash
 **Best for:** Consistent, neutral designs
 
 ```bash
-icons add --set ri home-line user-line settings-line mail-line search-line
+iconx add --set ri home-line user-line settings-line mail-line search-line
 ```
 
 ### Ionicons (`ion`)
@@ -166,7 +170,7 @@ icons add --set ri home-line user-line settings-line mail-line search-line
 **Best for:** Mobile applications, Ionic projects
 
 ```bash
-icons add --set ion home person settings mail search create trash add remove
+iconx add --set ion home person settings mail search create trash add remove
 ```
 
 ### Bootstrap Icons (`bi`)
@@ -177,7 +181,7 @@ icons add --set ion home person settings mail search create trash add remove
 **Best for:** Bootstrap projects
 
 ```bash
-icons add --set bi house person gear envelope search pencil trash plus dash
+iconx add --set bi house person gear envelope search pencil trash plus dash
 ```
 
 ## Framework-Specific Sets
@@ -190,7 +194,7 @@ icons add --set bi house person gear envelope search pencil trash plus dash
 **Best for:** Enterprise applications, IBM design system
 
 ```bash
-icons add --set carbon home user settings email search edit trash add subtract
+iconx add --set carbon home user settings email search edit trash add subtract
 ```
 
 ### Ant Design (`ant-design`)
@@ -201,7 +205,7 @@ icons add --set carbon home user settings email search edit trash add subtract
 **Best for:** Ant Design projects
 
 ```bash
-icons add --set ant-design home user setting mail search edit delete plus minus
+iconx add --set ant-design home user setting mail search edit delete plus minus
 ```
 
 ### Fluent UI System (`fluent`)
@@ -212,7 +216,7 @@ icons add --set ant-design home user setting mail search edit delete plus minus
 **Best for:** Microsoft design system, Windows applications
 
 ```bash
-icons add --set fluent home person settings mail search edit delete add subtract
+iconx add --set fluent home person settings mail search edit delete add subtract
 ```
 
 ## Choosing the Right Icon Set
@@ -227,6 +231,7 @@ icons add --set fluent home person settings mail search edit delete add subtract
 ### License Considerations
 
 Most icon sets use permissive licenses:
+
 - **MIT:** Lucide, Heroicons, Tabler, Feather, Phosphor
 - **Apache 2.0:** Material Design Icons, Carbon, Fluent UI
 - **CC BY 4.0:** Font Awesome
@@ -242,15 +247,15 @@ Check icon availability before choosing:
 
 ## Icon Set Comparison
 
-| Icon Set | Icons | License | Style | Best For |
-|----------|-------|---------|-------|----------|
-| Lucide | 1,000+ | MIT | Outline | Modern UI |
-| Heroicons | 230+ | MIT | Outline/Solid | Tailwind CSS |
-| Tabler | 4,000+ | MIT | Outline | Clean designs |
-| Feather | 280+ | MIT | Outline | Simple interfaces |
-| Phosphor | 1,200+ | MIT | Multiple weights | Flexible systems |
-| Material Design | 7,000+ | Apache 2.0 | Filled | Material Design |
-| Font Awesome | 1,600+ | CC BY 4.0 | Various | Established projects |
+| Icon Set        | Icons  | License    | Style            | Best For             |
+| --------------- | ------ | ---------- | ---------------- | -------------------- |
+| Lucide          | 1,000+ | MIT        | Outline          | Modern UI            |
+| Heroicons       | 230+   | MIT        | Outline/Solid    | Tailwind CSS         |
+| Tabler          | 4,000+ | MIT        | Outline          | Clean designs        |
+| Feather         | 280+   | MIT        | Outline          | Simple interfaces    |
+| Phosphor        | 1,200+ | MIT        | Multiple weights | Flexible systems     |
+| Material Design | 7,000+ | Apache 2.0 | Filled           | Material Design      |
+| Font Awesome    | 1,600+ | CC BY 4.0  | Various          | Established projects |
 
 ## Using Multiple Icon Sets
 
@@ -258,13 +263,13 @@ You can mix icon sets in the same project:
 
 ```bash
 # UI icons from Lucide
-icons add --set lucide home user settings mail search
+iconx add --set lucide home user settings mail search
 
 # Brand icons from Font Awesome
-icons add --set fa-brands github twitter linkedin
+iconx add --set fa-brands github twitter linkedin
 
 # Specialized icons from Octicons
-icons add --set octicons repo issue pull-request
+iconx add --set octicons repo issue pull-request
 ```
 
 ## Icon Naming Conventions
@@ -272,24 +277,28 @@ icons add --set octicons repo issue pull-request
 Different icon sets use different naming conventions:
 
 ### Lucide/Heroicons
+
 - `home` - House icon
 - `user` - User icon
 - `settings` - Settings icon
 - `mail` - Email icon
 
 ### Material Design Icons
+
 - `home` - House icon
 - `account` - User icon
 - `settings` - Settings icon
 - `email` - Email icon
 
 ### Font Awesome
+
 - `home` - House icon
 - `user` - User icon
 - `cog` - Settings icon
 - `envelope` - Email icon
 
 ### Tabler Icons
+
 - `home` - House icon
 - `user` - User icon
 - `settings` - Settings icon
@@ -301,12 +310,12 @@ Different icon sets use different naming conventions:
 
 ```bash
 # Good: Consistent icon set
-icons add --set lucide home user settings mail search
+iconx add --set lucide home user settings mail search
 
 # Avoid: Mixing styles unnecessarily
-icons add --set lucide home
-icons add --set heroicons user
-icons add --set feather settings
+iconx add --set lucide home
+iconx add --set heroicons user
+iconx add --set feather settings
 ```
 
 ### 2. Use Aliases for Consistency
@@ -325,26 +334,30 @@ icons add --set feather settings
 
 ```bash
 # Navigation icons
-icons add --set lucide home dashboard settings help
+iconx add --set lucide home dashboard settings help
 
-# Action icons  
-icons add --set lucide plus minus edit trash save
+# Action icons
+iconx add --set lucide plus minus edit trash save
 
 # Social icons
-icons add --set fa-brands github twitter linkedin
+iconx add --set fa-brands github twitter linkedin
 ```
 
 ### 4. Preview Icons Before Adding
 
-Always preview icons at [icon-sets.iconify.design](https://icon-sets.iconify.design/) to ensure they match your design needs.
+Always preview icons at
+[icon-sets.iconify.design](https://icon-sets.iconify.design/) to ensure they
+match your design needs.
 
 ## Finding Icons
 
 ### Search Methods
 
-1. **Browse by Set:** [icon-sets.iconify.design](https://icon-sets.iconify.design/)
+1. **Browse by Set:**
+   [icon-sets.iconify.design](https://icon-sets.iconify.design/)
 2. **Search by Name:** Use the search function on the Iconify website
-3. **Category Browse:** Browse by categories like "arrows", "communication", etc.
+3. **Category Browse:** Browse by categories like "arrows", "communication",
+   etc.
 
 ### Icon Search Tips
 
@@ -355,6 +368,5 @@ Always preview icons at [icon-sets.iconify.design](https://icon-sets.iconify.des
 
 ## Next Steps
 
-- [CLI Reference](/docs/saas-js-iconify/reference/cli) - Complete command reference
-- [Configuration](/docs/saas-js-iconify/reference/configuration) - Configure your project
-- [TypeScript](/docs/saas-js-iconify/reference/typescript) - TypeScript integration
+- [CLI Reference](/docs/iconx/reference/cli) - Complete command reference
+- [Configuration](/docs/iconx/reference/configuration) - Configure your project
