--- a/apps/website/content/saas-js/docs/(open-source)/iconx/reference/cli.mdx
+++ b/apps/website/content/saas-js/docs/(open-source)/iconx/reference/cli.mdx
@@ -1,6 +1,6 @@
 ---
 title: CLI Reference
-description: Complete command reference for @saas-js/iconify CLI
+description: Complete command reference for Iconx CLI
 ---
 
 # CLI Reference
@@ -8,21 +8,21 @@ description: Complete command reference for @saas-js/iconify CLI
 ## Global Options
 
 ```bash
-icons [command] [options]
+iconx [command] [options]
 ```
 
 ### Help
 
 ```bash
-icons --help
-icons -h
+iconx --help
+iconx -h
 ```
 
 ### Version
 
 ```bash
-icons --version
-icons -V
+iconx --version
+iconx -V
 ```
 
 ## Commands
@@ -32,15 +32,17 @@ icons -V
 Initialize an `icons.json` configuration file in your project root.
 
 ```bash
-icons init
+iconx init
 ```
 
 **Interactive prompts:**
+
 - Output directory for generated icons
 - Default icon set (e.g., lucide, heroicons, tabler)
 - Default icon size
 
 **Generated file:**
+
 ```json
 {
   "$schema": "https://saas-js.dev/icons/schema.json",
@@ -56,47 +58,75 @@ icons init
 Add icons to your project by generating React components.
 
 ```bash
-icons add [options] <icon-names...>
+iconx add [options] <icon-names...>
 ```
 
 **Arguments:**
+
 - `<icon-names...>` - One or more icon names to add
 
 **Options:**
-- `-s, --set <icon-set>` - Icon set to use (optional if defaultIconSet is configured)
+
+- `-s, --set <icon-set>` - Icon set to use (optional if defaultIconSet is
+  configured)
 - `-o, --outdir <path>` - Output directory for generated icons
 
 **Examples:**
 
 ```bash
 # Basic usage with explicit icon set
-icons add --set lucide home user settings
+iconx add --set lucide home user settings
 
 # Using short flag
-icons add -s heroicons home user settings
+iconx add -s heroicons home user settings
 
 # Using default icon set (if configured in icons.json)
-icons add home user settings
+iconx add home user settings
 
 # Custom output directory
-icons add --set lucide --outdir ./src/icons home user
+iconx add --set lucide --outdir ./src/icons home user
 
 # Short flags
-icons add -s lucide -o ./src/icons home user
+iconx add -s lucide -o ./src/icons home user
 
 # Add multiple icons at once
-icons add --set lucide home user settings mail search edit trash plus minus
+iconx add --set lucide home user settings mail search edit trash plus minus
+
+# Add multiple icons at once with aliases
+iconx add house:home cog:settings user:profile
 ```
+
+### `list`
+
+List all available icon sets.
+
+```bash
+iconx list
+```
+
+### `search`
+
+Search for icons in the specified icon set.
+
+```bash
+iconx search [options] <query>
+```
+
+**Arguments:**
+
+- `--set <icon-set>` - Icon set to search in
+- `<query>` - Query to search for
 
 ### `mcp`
 
 Start the MCP (Model Context Protocol) server for AI-assisted icon management.
 
 ```bash
-icons mcp
+iconx mcp
 ```
 
-This starts a server that can be used by AI assistants to help manage your icons. The MCP server provides:
+This starts a server that can be used by AI assistants to help manage your
+icons. The MCP server provides:
 
 - Icon search capabilities
 - Automated icon addition
@@ -117,36 +147,36 @@ This starts a server that can be used by AI assistants to help manage your icons
 
 ```bash
 # Initialize new project
-icons init
+iconx init
 
 # Add common icons
-icons add --set lucide home user settings mail search
+iconx add --set lucide home user settings mail search
 ```
 
 ### Feature-based Icon Addition
 
 ```bash
 # Authentication icons
-icons add --set lucide log-in log-out user-plus user-minus
+iconx add --set lucide log-in log-out user-plus user-minus
 
 # Navigation icons
-icons add --set lucide home dashboard settings help
+iconx add --set lucide home dashboard settings help
 
 # Action icons
-icons add --set lucide plus minus edit trash save
+iconx add --set lucide plus minus edit trash save
 ```
 
 ### Working with Multiple Icon Sets
 
 ```bash
 # Lucide icons for general UI
-icons add --set lucide home user settings
+iconx add --set lucide home user settings
 
 # Heroicons for specific components
-icons add --set heroicons academic-cap beaker
+iconx add --set heroicons academic-cap beaker
 
 # Font Awesome for brand icons
-icons add --set fa-brands github twitter linkedin
+iconx add --set fa-brands github twitter linkedin
 ```
 
 ## Error Handling
@@ -154,28 +184,33 @@ icons add --set fa-brands github twitter linkedin
 ### Common Errors
 
 **Configuration not found:**
+
 ```bash
-Error: No icons.json configuration found. Run 'icons init' first.
+Error: No icons.json configuration found. Run 'iconx init' first.
 ```
 
 **Invalid icon set:**
+
 ```bash
-Error: Icon set 'invalid-set' not found. 
+Error: Icon set 'invalid-set' not found.
 Available sets: lucide, heroicons, tabler, feather, etc.
 ```
 
 **Icon not found:**
+
 ```bash
 Error: Icon 'invalid-icon' not found in set 'lucide'.
 Try browsing available icons at https://icon-sets.iconify.design/lucide
 ```
 
 **Network error:**
+
 ```bash
 Error: Failed to fetch icon data. Check your internet connection.
 ```
 
 **File system error:**
+
 ```bash
 Error: Cannot write to output directory '/src/components/icons'.
 Check permissions and ensure the directory exists.
@@ -186,7 +221,7 @@ Check permissions and ensure the directory exists.
 Enable verbose output for debugging:
 
 ```bash
-DEBUG=icons:* icons add --set lucide home user
+DEBUG=icons:* iconx add --set lucide home user
 ```
 
 ## Tips and Best Practices
@@ -195,23 +230,23 @@ DEBUG=icons:* icons add --set lucide home user
 
 ```bash
 # Good: Stick to one primary icon set
-icons add --set lucide home user settings mail
+iconx add --set lucide home user settings mail
 
 # Avoid: Mixing different styles
-icons add --set lucide home
-icons add --set heroicons user  # Different style
+iconx add --set lucide home
+iconx add --set heroicons user  # Different style
 ```
 
 ### 2. Batch Icon Addition
 
 ```bash
 # Good: Add related icons together
-icons add --set lucide home user settings mail search edit trash plus minus
+iconx add --set lucide home user settings mail search edit trash plus minus
 
 # Less efficient: Add icons one by one
-icons add --set lucide home
-icons add --set lucide user
-icons add --set lucide settings
+iconx add --set lucide home
+iconx add --set lucide user
+iconx add --set lucide settings
 ```
 
 ### 3. Use Aliases for Better Names
@@ -231,15 +266,15 @@ Set up aliases in your `icons.json`:
 Then use the original names:
 
 ```bash
-icons add house cog envelope
+iconx add house cog envelope
 ```
 
 ### 4. Organize Output Directory
 
 ```bash
 # Feature-based organization
-icons add --set lucide --outdir ./src/icons/navigation home dashboard
-icons add --set lucide --outdir ./src/icons/actions plus minus edit trash
+iconx add --set lucide --outdir ./src/icons/navigation home dashboard
+iconx add --set lucide --outdir ./src/icons/actions plus minus edit trash
 ```
 
 ### 5. Check Icon Availability
@@ -256,27 +291,18 @@ Before adding icons, check if they exist:
 
 ```bash
 # Add to Next.js project
-icons init
+iconx init
 # Configure outputDir: "./components/icons"
-icons add --set lucide home user settings
+iconx add --set lucide home user settings
 ```
 
 ### Vite
 
 ```bash
 # Add to Vite project
-icons init
+iconx init
 # Configure outputDir: "./src/components/icons"
-icons add --set lucide home user settings
-```
-
-### Create React App
-
-```bash
-# Add to CRA project
-icons init
-# Configure outputDir: "./src/components/icons"
-icons add --set lucide home user settings
+iconx add --set lucide home user settings
 ```
 
 ## Continuous Integration
@@ -298,8 +324,8 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '18'
-      - run: npm install -g @saas-js/iconify
-      - run: icons add --set lucide home user settings
+      - run: npm install -g iconx
+      - run: iconx add --set lucide home user settings
       - name: Commit changes
         run: |
           git config --local user.email "action@github.com"
@@ -309,22 +335,8 @@ jobs:
           git push
 ```
 
-### Pre-commit Hook
-
-```bash
-#!/bin/bash
-# .git/hooks/pre-commit
-
-# Check if icons.json was modified
-if git diff --cached --name-only | grep -q "icons.json"; then
-  echo "Icons configuration changed, updating icons..."
-  icons add --set lucide home user settings
-  git add src/components/icons/
-fi
-```
-
 ## Next Steps
 
-- [Configuration](/docs/saas-js-iconify/reference/configuration) - Detailed configuration options
-- [Icon Sets](/docs/saas-js-iconify/reference/icon-sets) - Browse available icon sets
-- [TypeScript](/docs/saas-js-iconify/reference/typescript) - TypeScript integration
+- [Configuration](/docs/iconx/reference/configuration) - Detailed configuration
+  options
+- [Icon Sets](/docs/iconx/reference/icon-sets) - Browse available icon sets
